fix scrollbar, fix funding,

--- a/src/app/systemModule/my-ticket-opened/my-ticket-opened.component.css
+++ b/src/app/systemModule/my-ticket-opened/my-ticket-opened.component.css
@@ -8,3 +8,7 @@
     top: 100%;
     background: #fff;
 }
+
+@media print {
+    .flex-ticket-wrapp .sides .butt-wrapp-grad .butt-style-1 { display: none !important; }
+ }
